<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".MainActivity$PlaceholderFragment"
    android:layoutMode="opticalBounds">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:background="#f00000"
        android:text="@string/top"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:textColor="#ffffffff"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:paddingLeft="10dp" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageButton5"
        android:src="@drawable/top"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/imageButton5"
        android:layout_marginStart="40dp"
        android:textSize="14dp"
        android:textColor="#ffffffff"
        android:layout_marginLeft="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="24dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:id="@+id/editText"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignEnd="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:id="@+id/textView9"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignStart="@+id/textView8"
        android:layout_toStartOf="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav"
        android:id="@+id/textView10"
        android:layout_marginTop="70dp"
        android:textColor="#ff000000"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text=">"
        android:id="@+id/textView11"
        android:textColor="#ff000000"
        android:clickable="true"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now"
        android:id="@+id/textView13"
        android:layout_alignTop="@+id/textView12"
        android:layout_toEndOf="@+id/textView9" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/change"
        android:id="@+id/button"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignEnd="@+id/textView11"
        android:textSize="12dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dep"
        android:id="@+id/radioButton"
        android:layout_marginTop="49dp"
        android:checked="true"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/textView12"
        android:buttonTint="@android:color/holo_blue_light" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arr"
        android:id="@+id/radioButton2"
        android:checked="false"
        android:layout_alignTop="@+id/radioButton"
        android:layout_alignEnd="@+id/textView7"
        android:buttonTint="@android:color/holo_blue_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/traf"
        android:id="@+id/textView14"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/radioButton"
        android:layout_alignStart="@+id/textView12" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/change"
        android:id="@+id/button2"
        android:textSize="12dp"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignEnd="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bev"
        android:id="@+id/textView15"
        android:layout_marginTop="64dp"
        android:textColor="#ff000000"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignEnd="@+id/button2" />

    <TextView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text=">"
        android:id="@+id/textView16"
        android:textColor="#ff000000"
        android:clickable="true"
        android:layout_alignTop="@+id/textView15"
        android:layout_toStartOf="@+id/textView11" />

</RelativeLayout>
