
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity" tools:ignore="MergeRootFrame"
    android:rowCount="20"
    android:columnCount="14"
    android:background="#ffffff">

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:id="@+id/reseButton"
        android:layout_row="18"
        android:layout_column="12"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="63dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/planner"
        android:background="#ffffffff"
        android:layout_alignEnd="@+id/imageButton3" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="80dp"
        android:text="@string/opt1"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textColor="#8c1a1a1a"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_below="@+id/reseButton"
        android:layout_alignStart="@+id/imageButton3" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton2"
        android:layout_row="18"
        android:layout_column="12"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignTop="@+id/reseButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="47dp"
        android:src="@drawable/table"
        android:background="#ffffffff" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="80dp"
        android:text="@string/opt2"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:textColor="#8c1a1a1a"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/textView"
        android:layout_alignStart="@+id/imageButton2"
        android:layout_alignEnd="@+id/imageButton2" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton3"
        android:layout_row="18"
        android:layout_column="12"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/station"
        android:background="#ffffffff" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="80dp"
        android:text="@string/opt3"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:textColor="#8c1a1a1a"
        android:textSize="16dp"
        android:layout_below="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
        android:textStyle="bold"
        android:layout_alignEnd="@+id/imageButton3" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton4"
        android:layout_row="18"
        android:layout_column="12"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_alignStart="@+id/textView2"
        android:src="@drawable/ticket"
        android:background="#ffffffff" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="80dp"
        android:text="@string/opt4"
        android:id="@+id/textView4"
        android:textColor="#8c1a1a1a"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignStart="@+id/imageButton4"
        android:layout_alignEnd="@+id/imageButton4"
        android:paddingLeft="15dp" />

</RelativeLayout>